[gd_scene load_steps=32 format=3 uid="uid://8f32qtkrf2hr"]

[ext_resource type="Gradient" uid="uid://cyl2f0w8vvvvn" path="res://Colors/asset_colors/ground_01.tres" id="1_2c62f"]
[ext_resource type="Gradient" uid="uid://8gk1ghe5j20s" path="res://Colors/pastels.tres" id="2_gyfs4"]
[ext_resource type="Texture2D" uid="uid://hpx5d1cjhq3u" path="res://Ref_images/refim_01.png" id="2_qwutr"]
[ext_resource type="Texture2D" uid="uid://df1nyqnc7pv3a" path="res://Ref_images/refimg_02.png" id="2_wr18j"]
[ext_resource type="Script" uid="uid://63xd0wwpp1el" path="res://hud.gd" id="5_7ycvg"]
[ext_resource type="PackedScene" uid="uid://c7bfhfltjy6av" path="res://Assets/path/table_01_00.tscn" id="5_8mm7a"]
[ext_resource type="PackedScene" uid="uid://ct1k05v5lr35q" path="res://Assets/towers/tower_1_toysoldier.tscn" id="5_mo76n"]
[ext_resource type="Gradient" uid="uid://bh63ak8hbh4r6" path="res://Colors/ui_colors/buttons_01.tres" id="6_66tet"]
[ext_resource type="Script" uid="uid://ccynmoag5ppbq" path="res://path.gd" id="6_671wp"]
[ext_resource type="Gradient" uid="uid://dj72fx45gaaji" path="res://Colors/ui_colors/hud_01.tres" id="6_hq1ik"]
[ext_resource type="Script" uid="uid://dberpdrjbjji6" path="res://target_collectors.gd" id="7_66tet"]
[ext_resource type="Theme" uid="uid://xwraynlxvb7d" path="res://Themes/ui_01.tres" id="7_nfk4m"]
[ext_resource type="Script" uid="uid://d0l008crncmg6" path="res://projctile_collector.gd" id="13_mo76n"]
[ext_resource type="PackedScene" uid="uid://w2ffngwoj7g6" path="res://Assets/towers/tower_2_spinningtoptscn.tscn" id="14_42l1d"]
[ext_resource type="PackedScene" uid="uid://bhcvbk8530le5" path="res://Assets/towers/tower_3_snowglobe.tscn" id="15_2jcla"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2c62f"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_gyfs4"]
sky_material = SubResource("ProceduralSkyMaterial_2c62f")

[sub_resource type="Environment" id="Environment_d5x1h"]
background_mode = 2
sky = SubResource("Sky_gyfs4")
tonemap_mode = 2

[sub_resource type="GradientTexture2D" id="GradientTexture2D_66tet"]
gradient = ExtResource("2_gyfs4")

[sub_resource type="Gradient" id="Gradient_d5x1h"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.0070922, 0.0585106, 0.102837, 0.152482, 0.219858, 0.342199, 0.391844, 0.445035, 0.502242, 0.556054, 0.605381, 0.641256, 0.691489, 0.730942, 0.760837, 0.796712, 0.852018, 0.88216, 0.920213, 0.973404)
colors = PackedColorArray(0.243137, 0.168627, 0.0901961, 1, 0.317647, 0.152941, 0.227451, 1, 0.317647, 0.180392, 0.337255, 1, 0.196078, 0.309804, 0.552941, 1, 0.0313726, 0.529412, 0.831373, 1, 0.211765, 0.764706, 0.784314, 1, 0.266667, 0.54902, 0.321569, 1, 0.298039, 0.470588, 0.105882, 1, 0.45098, 0.670588, 0.160784, 1, 0.529412, 0.505882, 0.341176, 1, 0.421684, 0.232404, 0.396339, 1, 0.580392, 0.247059, 0.560784, 1, 0.635294, 0.235294, 0.509804, 1, 0.675087, 0.27845, 0.377538, 1, 0.59, 0.1062, 0.138453, 1, 0.733333, 0.145098, 0.223529, 1, 0.882353, 0.486275, 0.243137, 1, 0.898039, 0.588235, 0.160784, 1, 0.929412, 0.8, 0.454902, 1, 0.952941, 0.941176, 0.901961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8mm7a"]
gradient = SubResource("Gradient_d5x1h")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_d5x1h"]
noise_type = 2
frequency = 0.0495
fractal_octaves = 1
cellular_distance_function = 2
cellular_jitter = 0.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8mm7a"]
color_ramp = ExtResource("1_2c62f")
noise = SubResource("FastNoiseLite_d5x1h")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8mm7a"]
blend_mode = 1
albedo_color = Color(0.0383972, 0.0383972, 0.0383972, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hq1ik"]
next_pass = SubResource("StandardMaterial3D_8mm7a")
albedo_texture = SubResource("NoiseTexture2D_8mm7a")

[sub_resource type="PlaneMesh" id="PlaneMesh_nfk4m"]
material = SubResource("StandardMaterial3D_hq1ik")
size = Vector2(200, 200)

[sub_resource type="Curve3D" id="Curve3D_hq1ik"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, -5.76, 0, 0, 0, 0, 0, 2.075, 0, 0, 12.63, 0, 0, 0, 0, 0, 0, 3.52, 0, 14.635, 0, 0, 0, 3.19, 0, 0, 9.43, 0, 14.635, 0, 0, 0, 0, 0, 0, 12.63, 0, 16.635, 0, 0, 0, 0, 0, 2.42, 12.63, 0, 20.59, 0, 0, 0, 0, 0, 0, 9.89, 0, 23.29, 0, 0, 0, -1.81, 0, 0, 6.28, 0, 23.29, 0, 0, 0, 0, 0, 0, 4.555, 0, 25.62, 0, 0, 0, 0, 0, 1.33, 4.555, 0, 29.62, 0, 0, 0, 0, 0, 0, 7.075, 0, 30.965, 0, 0, 0, 2.15, 0, 0, 9.76, 0, 30.965, 0, 0, 0, 0, 0, 0, 12.22, 0, 33.38, 0, 0, 0, 0, 0, 2.92, 12.22, 0, 40.71, 0, 0, 0, 0, 0, 0, 10.095, 0, 44.025, 0, 0, 0, -3.24, 0, 0, -13.74, 0, 44.025, 0, 0, 0, 0, 0, 0, -17.73, 0, 41.24, 0, 0, 0, 0, 0, -2.67, -17.73, 0, 37.36, 0, 0, 0, 0, 0, 0, -14.47, 0, 34.625, 0, 0, 0, 3.765, 0, 0, -8.495, 0, 34.625, 0, 0, 0, 0, 0, 0, -5.25, 0, 31.505, 0, 0, 0, 0, 0, -1.715, -5.25, 0, 20.645, 0, 0, 0, 0, 0, 0, -8.11, 0, 17.445, 0, 0, 0, -2.29, 0, 0, -10.805, 0, 17.445, 0, 0, 0, 0, 0, 0, -13.805, 0, 20.59, 0, 0, 0, 0, 0, 2.955, -13.805, 0, 23.285, 0, 0, 0, 0, 0, 0, -16.44, 0, 26.14, 0, 0, 0, 0, 0, 0, -21.005, 0, 26.14),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 28

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nfk4m"]
gradient = ExtResource("6_hq1ik")
fill_from = Vector2(0.512821, 1)
fill_to = Vector2(0.525641, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_66tet"]
texture = SubResource("GradientTexture2D_nfk4m")

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7ycvg"]
gradient = ExtResource("6_66tet")
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wr18j"]

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_d5x1h")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Palettes" type="CanvasLayer" parent="."]
visible = false

[node name="Palette_1" type="TextureRect" parent="Palettes"]
offset_left = 26.0
offset_top = 25.0
offset_right = 669.0
offset_bottom = 89.0
texture = SubResource("GradientTexture2D_66tet")

[node name="TextureRect2" type="TextureRect" parent="Palettes"]
offset_left = -36.0
offset_top = 253.0
offset_right = 1407.0
offset_bottom = 1153.0
scale = Vector2(0.43525, 0.373685)
texture = ExtResource("2_qwutr")

[node name="Palette_2" type="TextureRect" parent="Palettes"]
offset_left = 26.0
offset_top = 89.0
offset_right = 669.0
offset_bottom = 153.0
texture = SubResource("GradientTexture2D_8mm7a")

[node name="TextureRect" type="TextureRect" parent="Palettes"]
offset_left = 617.0
offset_top = 295.0
offset_right = 2060.0
offset_bottom = 1195.0
scale = Vector2(0.371976, 0.377874)
texture = ExtResource("2_wr18j")

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
mesh = SubResource("PlaneMesh_nfk4m")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.224407, 0.638954, -0.735784, -1.26642e-07, 0.755041, 0.655677, 0.974496, -0.147138, 0.169437, -27.0851, 20.3967, -2.13846)
projection = 1
size = 36.635
far = 414.87

[node name="tower_1_toysoldier" parent="." instance=ExtResource("5_mo76n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 3)

[node name="tower_1_toysoldier2" parent="." instance=ExtResource("5_mo76n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -25)

[node name="Path" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.04397, -3.95, -5.37823)

[node name="Path3D" type="Path3D" parent="Path"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 4.8, -30)
curve = SubResource("Curve3D_hq1ik")
script = ExtResource("6_671wp")

[node name="Table_Mesh" type="Node3D" parent="Path"]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 0, 0, 0)

[node name="table_01_00" parent="Path/Table_Mesh" instance=ExtResource("5_8mm7a")]
transform = Transform3D(8.23, 0, 0, 0, 8, 0, 0, 0, 5.655, 0.844696, 0, -2.54291)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("5_7ycvg")

[node name="Bottom_UI" type="MarginContainer" parent="HUD"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="HUD/Bottom_UI"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_66tet")

[node name="HSplitContainer" type="HSplitContainer" parent="HUD/Bottom_UI"]
layout_mode = 2
split_offset = 1235

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Bottom_UI/HSplitContainer"]
layout_mode = 2
theme_override_constants/separation = 65
alignment = 1

[node name="Panel" type="Button" parent="HUD/Bottom_UI/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_icons/icon = SubResource("GradientTexture2D_7ycvg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wr18j")
icon_alignment = 1
expand_icon = true

[node name="Panel2" type="Button" parent="HUD/Bottom_UI/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_icons/icon = SubResource("GradientTexture2D_7ycvg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wr18j")
icon_alignment = 1
expand_icon = true

[node name="Panel3" type="Button" parent="HUD/Bottom_UI/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_icons/icon = SubResource("GradientTexture2D_7ycvg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wr18j")
icon_alignment = 1
expand_icon = true

[node name="Panel4" type="Button" parent="HUD/Bottom_UI/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_icons/icon = SubResource("GradientTexture2D_7ycvg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wr18j")
icon_alignment = 1
expand_icon = true

[node name="Panel5" type="Button" parent="HUD/Bottom_UI/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_icons/icon = SubResource("GradientTexture2D_7ycvg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wr18j")
icon_alignment = 1
expand_icon = true

[node name="HBox_Buttons" type="HBoxContainer" parent="HUD/Bottom_UI/HSplitContainer"]
layout_mode = 2

[node name="Button_Start-Wave" type="Button" parent="HUD/Bottom_UI/HSplitContainer/HBox_Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_nfk4m")
text = "Start Wave"

[node name="Side_UI" type="MarginContainer" parent="HUD"]
visible = false
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -253.0
offset_top = 69.0
offset_bottom = -190.0
grow_horizontal = 0
grow_vertical = 2

[node name="Panel" type="Panel" parent="HUD/Side_UI"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_66tet")

[node name="Top_UI" type="MarginContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 61.0
grow_horizontal = 2

[node name="HSplit" type="HSplitContainer" parent="HUD/Top_UI"]
layout_mode = 2
theme_override_constants/separation = 15
split_offset = 1225

[node name="HBox_Top_Left" type="HBoxContainer" parent="HUD/Top_UI/HSplit"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Icon_Lives" type="Panel" parent="HUD/Top_UI/HSplit/HBox_Top_Left"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Label_Lives" type="Label" parent="HUD/Top_UI/HSplit/HBox_Top_Left"]
layout_mode = 2
theme = ExtResource("7_nfk4m")
text = "40"

[node name="VSeparator" type="VSeparator" parent="HUD/Top_UI/HSplit/HBox_Top_Left"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Icon_Money" type="Panel" parent="HUD/Top_UI/HSplit/HBox_Top_Left"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Label_Money" type="Label" parent="HUD/Top_UI/HSplit/HBox_Top_Left"]
layout_mode = 2
theme = ExtResource("7_nfk4m")
text = "100"

[node name="HBox_Top_Right" type="HBoxContainer" parent="HUD/Top_UI/HSplit"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBox_Container" type="HBoxContainer" parent="HUD/Top_UI/HSplit/HBox_Top_Right"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Icon_Wave" type="Panel" parent="HUD/Top_UI/HSplit/HBox_Top_Right/HBox_Container"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Label_Wave" type="Label" parent="HUD/Top_UI/HSplit/HBox_Top_Right/HBox_Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme = ExtResource("7_nfk4m")

[node name="VSeparator" type="VSeparator" parent="HUD/Top_UI/HSplit/HBox_Top_Right"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Icon_Settings" type="Panel" parent="HUD/Top_UI/HSplit/HBox_Top_Right"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="HUD/Top_UI/HSplit/HBox_Top_Right"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Target_Collector" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31, 0, -43)
script = ExtResource("7_66tet")
reparent_timer_length_divisor = 0.3

[node name="Projctile_Collector" type="Node3D" parent="."]
script = ExtResource("13_mo76n")

[node name="tower_2_spinningtop3" parent="." instance=ExtResource("14_42l1d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, -16.1)

[node name="tower_2_spinningtop4" parent="." instance=ExtResource("14_42l1d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.4, 0, 3.96238)

[node name="tower_2_spinningtop5" parent="." instance=ExtResource("14_42l1d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5, 0, 4.39743)

[node name="tower_3_snowglobe" parent="." instance=ExtResource("15_2jcla")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.4, 0, -14)

[node name="tower_3_snowglobe2" parent="." instance=ExtResource("15_2jcla")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.3, 0, -24.1)
